<resources>
    <string name="product_name_error">Product name is mandatory</string>
    <string name="Product_price_error">Product price is mandatory</string>
    <string name="SKU_error">Product SKU is mandatory</string>
    <string name="width_error">Product width is mandatory</string>
    <string name="height_error">Product height is mandatory</string>
    <string name="weight_error">Product weight is mandatory</string>
    <string name="app_name">MomoGrow</string>
    <string name="enter_monile_title">Enter your mobile number</string>
    <string name="country_mobile_code">+256</string>
    <string name="next">Next</string>
    <string name="mobile_number_incorrect">Mobile number incorrect. Try again</string>
    <string name="authenticate_yourself">Authenticate yourself</string>
    <string name="wevesentyouamessageat">We\'ve sent you a message at</string>
    <string name="message_not_received">Message not received? </string>
    <string name="send_again">Send again</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirmyourdetails">Confirm your details</string>
    <string name="confirmyourdetails_msg">Please make sure the information below is \n correct.</string>
    <string name="first_name">First name *</string>
    <string name="last_name">Last name *</string>
    <string name="mobil_no">Mobile no. *</string>
    <string name="email">Email address (optional)</string>
    <string name="business_name">Business name *</string>
    <string name="business_category">BusinessCategory *</string>
    <string name="confirm_details">Confirm details</string>
    <string name="setuppassword">Set up password</string>
    <string name="setuppassword_msg">Please set up a secure password following \n the criteria below.</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_rule_1">At least 8 characters in lengh</string>
    <string name="password_rule_2">Lower case letter (a-z)</string>
    <string name="password_rule_3">Upper case letter (A-Z)</string>
    <string name="password_rule_4">Special character</string>
    <string name="sign_up">Sign-up</string>
    <string name="pending_approval">Pending Approval</string>
    <string name="pending_approval_msg">Your request is being reviewed by our team, it \n might take up to 72 hours.</string>
    <string name="pending_error"><![CDATA[We are sorry ]]></string>
    <string name="pending_approval_msg_error">Registration is currently limited to MTN \n merchants. Check back in later as we\'ll be \n opening up registration to non-MTN merchants \n in the future.</string>
    <string name="back">Back</string>
    <string name="confirm_locaion">Confirm location</string>
    <string name="yello"> Y\'ello</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This month</string>
    <string name="custom">Custom</string>
    <string name="sales">Sales</string>
    <string name="ugx">UGX</string>
    <string name="payment_transaction"> Payment \n Transactions</string>
    <string name="marketplaceOrders"> Marketplace \n Orders</string>
    <string name="dashboard">Dashboard</string>
    <string name="orders">Orders</string>
    <string name="catalog">Catalog</string>
    <string name="more">More</string>
    <string name="transactions">Transactions</string>
    <string name="see_all">See all</string>
    <string name="mobile_hint">xxx-xxx-xxx</string>
    <string name="invalid_monile_number_msg">Enter valid mobile number</string>
    <string name="confirm_store_location">Confirm store location</string>
    <string name="this_placeholder">This is a placeholder</string>
    <string name="location_hint">Search about your address</string>
    <string name="search_order">Search order</string>
    <string name="all">All</string>
    <string name="payment">Payment</string>
    <string name="paylink">PayLink</string>
    <string name="add_note">Add a note</string>
    <string name="link_expires">Link expires</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eghit">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="zerozero">00</string>
    <string name="share_paylink_via">Share PayLink via</string>
    <string name="email_word">Email</string>
    <string name="sms">SMS</string>
    <string name="share">Share</string>
    <string name="qr">QR Code</string>
    <string name="notifications">Notifications</string>
    <string name="search_notification">Search notification</string>
    <string name="add_product">Add product</string>
    <string name="product_name">Product name*</string>
    <string name="produt_description">Product description</string>
    <string name="product_price">ProductPrice*</string>
    <string name="product_category">Product category</string>
    <string name="sku">SKU*</string>
    <string name="width">Width*</string>
    <string name="height">Height*</string>
    <string name="weight">Weight*</string>
    <string name="product_image">Product image(s)</string>
    <string name="quantityinstock">Quantity in stock</string>
    <string name="order_details">Order details</string>
    <string name="first_name_word">First name</string>
    <string name="cancel">Cancel</string>
    <string name="setupyourstorefront">Set up your storefront</string>
    <string name="setupyourstorefront_description">Set up your own web storefront with \n customised branding to help you build \n your online presence!</string>
    <string name="setup_now">Set up now</string>
    <string name="addyourfirstproduct">Add your first product</string>
    <string name="addyourfirstproduct_description">It\'s time to start selling online, to do so add \n your fist product now</string>
    <string name="pending_approval_producr_msg">Your product request is being reviewed by our \n team, it might take up to 48 hours.</string>
    <string name="ok">OK</string>
    <string name="product_details">Product details</string>
    <string name="product_images">Product images</string>
    <string name="product_settings">Product settings</string>
    <string name="featuresproduct">Features product</string>
    <string name="delet">Delete</string>
    <string name="edit">Edit</string>
    <string name="cancel_order">Cancel order</string>
    <string name="cancel_order_msg">We\'ll confirm the refund once you confirmed \n the cancellation.</string>
    <string name="total_refund">Total refund</string>
    <string name="reasonforcancellation">Reason for cancellation*</string>
    <string name="reasonforcancellationnormal">Reason for cancellation</string>
    <string name="confirmcancellation">Confirm cancellation</string>
    <string name="ordercancelled">Order cancelled</string>
    <string name="ordercancelled_msg">We are processing the refund, it might take up \n to 72 hours.</string>
    <string name="dispatch">Dispatch</string>
    <string name="cancelled">Cancelled</string>
    <string name="pickupdetails">Pickup details</string>
    <string name="dispatch_msg">please make sure pickup details are \n accurate.</string>
    <string name="delivaryaddress">Delivery address*</string>
    <string name="pickupinstructions">Pickup instructions</string>
    <string name="pickuptime">Pickup time</string>
    <string name="orderdispatched">Order dispatched</string>
    <string name="orderdispatched_msg">Make sure you are available at the pickup location when the deliveryman arrives</string>
    <string name="deliveryref">Delivery ref</string>
    <string name="intransit">Processing</string>
    <string name="confirm_dispatch">Confirm dispatch</string>
    <string name="deliverydetails">Delivery details</string>
    <string name="deliverydetails_msg">We\'ll initiate the refund once you confirmed the cancellation.</string>
    <string name="delivaryaddress_normal">Delivery address</string>
    <string name="share_via_email">Share via Email</string>
    <string name="share_via_email_msg">Please enter the email of the payer</string>
    <string name="payeremail">Payer email *</string>
    <string name="confrimation">Confirmation</string>
    <string name="confrimation_msg">The PayLink has been shared with the \n customer</string>
    <string name="view_details">View details</string>
    <string name="close">Close</string>
    <string name="qrCode">QR Code</string>
    <string name="done">Done</string>
    <string name="merchant_name">Momo Test</string>
    <string name="accountdetails">Account details</string>
    <string name="location">Location</string>
    <string name="storefront">Storefront</string>
    <string name="logout">Logout</string>
    <string name="social">Social</string>
    <string name="search">Search</string>
    <string name="refund">Refund</string>
    <string name="orderrefunded">Order refunded</string>
    <string name="orderrefund_msg">We are processing the refund, it might take up \n to 72 hours.</string>
    <string name="delivered">Delivered</string>
    <string name="refunded">Refunded</string>
    <string name="refund_msg">Select the product(s) you want to refund</string>
    <string name="requestitemreturn">Request item(s) return</string>
    <string name="enter_login_title">Enter your password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="resetpassword">Reset password</string>
    <string name="resetpassword_msg">Please set up a secure password following the \n criteria below.</string>
    <string name="password_reset">Password reset</string>
    <string name="backtologin">Back to login</string>
    <string name="share_via_sms_msg">Please enter the mobile no. of the payer</string>
    <string name="setupyourstorefront_msg">In addition to selling your products on the MoMo MarketPlace, you can also set up your own web storefront with customised branding to help you build your online presence.If you don\'t want to do it now, you can setup your storefront at anytime from the *More* button on the main menu navigation.</string>
    <string name="setupnow">Set up now</string>
    <string name="later">Later</string>
    <string name="products"> Products</string>
    <string name="paylink_details">PayLink Details</string>
    <string name="order_id">Order ID</string>
    <string name="terminaliD">Terminal ID</string>
    <string name="payer_name">Payer name</string>
    <string name="payer_mobile">Payer mobile no</string>
    <string name="expires_on">Expires on</string>
    <string name="senton">Sent on</string>
    <string name="lastviewed">Last viewed</string>
    <string name="paiddate">Paid date</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="rejectrefund">Reject refund</string>
    <string name="rejectrefund_msg">Please tell us why you are rejecting the refund request</string>
    <string name="reasonorrejection">Reason for rejection</string>
    <string name="last_name_normal">Last name</string>
    <string name="address">Address</string>
    <string name="paymentdetails">Payment details</string>
    <string name="type">Type</string>
    <string name="transactionID">Transaction ID</string>
    <string name="transactionstatus">Transaction status</string>
    <string name="amountdetails">Amount details</string>
    <string name="customerpaid">Customer paid</string>
    <string name="comission">Commission</string>
    <string name="deliveryfees">Delivery fees</string>
    <string name="settlementamount">Settlement amount</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
</resources>