<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="@dimen/_16sdp"
    android:paddingTop="@dimen/_16sdp"
    android:paddingEnd="@dimen/_16sdp"
    android:paddingBottom="@dimen/_16sdp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_validated_larg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/confrimation"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="center"
        android:text="@string/confrimation_msg"
        android:textColor="@color/gray_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/view_details"
            android:textAllCaps="false"
            android:textSize="@dimen/_11sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="1"
            android:backgroundTint="@color/purple_500"
            android:text="@string/close"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp" />

    </LinearLayout>

</LinearLayout>