<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="@dimen/_16sdp"
    android:paddingTop="@dimen/_16sdp"
    android:paddingEnd="@dimen/_16sdp"
    android:paddingBottom="@dimen/_16sdp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_validated_larg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/mtn_brighter_sans_bold"
        android:text="@string/ordercancelled"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/mtn_brighter_sans_regular"
        android:gravity="center"
        android:text="@string/ordercancelled_msg"
        android:textColor="@color/gray_light" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_11sdp" />

</LinearLayout>