<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="@dimen/_16sdp"
    android:layout_marginEnd="@dimen/_16sdp"
    android:background="@drawable/dialog_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_18sdp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/ic_computer_large" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18sdp"
        android:fontFamily="@font/mtn_brighter_sans_bold"
        android:text="@string/setupyourstorefront"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18sdp"
        android:fontFamily="@font/mtn_brighter_sans_regular"
        android:gravity="center"
        android:text="@string/setupyourstorefront_msg"
        android:textColor="@color/gray_light" />


    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_35sdp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/mtn_brighter_sans_bold"
        android:paddingTop="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:text="@string/setupnow"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_goneMarginBottom="16dp" />

    <Button
        android:id="@+id/btnLater"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/mtn_brighter_sans_bold"
        android:text="@string/later"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_goneMarginBottom="16dp" />

</LinearLayout>