<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="@dimen/_16sdp"
    android:paddingTop="@dimen/_16sdp"
    android:paddingEnd="@dimen/_16sdp"
    android:paddingBottom="@dimen/_16sdp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_validated_larg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/mtn_brighter_sans_bold"
        android:text="@string/orderdispatched"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/mtn_brighter_sans_regular"
        android:gravity="center"
        android:text="@string/orderdispatched_msg"
        android:textColor="@color/gray_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deliveryref" />

        <androidx.legacy.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvOrderRef"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="ABC1234jsdbjkdbsjkdsbjkbdsjkbsdjkbsdkjdsbkjsdbjksd55"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_11sdp" />

</LinearLayout>