<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/_65sdp"
    tools:context=".views.register.PasswordFragment">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mtn_brighter_sans_bold"
        android:gravity="center"
        android:text="@string/setuppassword"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/mtn_brighter_sans_light"
        android:gravity="center"
        android:text="@string/setuppassword_msg"
        android:textColor="@color/gray_light"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@id/tv1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tv2">

        <LinearLayout
            android:id="@+id/linearPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_rectangle_grey"
            android:orientation="vertical"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:paddingEnd="12dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPassword"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                app:hintTextColor="@color/hint_et_black_50_opacity"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:paddingTop="6dp"
                    android:textColor="@color/et_color_black_100_opacity"
                    android:textSize="@dimen/_12sdp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_rectangle_grey"
            android:orientation="vertical"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:paddingEnd="12dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputConfirmPassword"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                app:hintTextColor="@color/hint_et_black_50_opacity"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:paddingTop="6dp"
                    android:textColor="@color/et_color_black_100_opacity"
                    android:textSize="@dimen/_12sdp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tvRule1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:drawablePadding="6dp"
            android:fontFamily="@font/mtn_brighter_sans_regular"
            android:text="@string/password_rule_1"
            android:textSize="@dimen/_10sdp"
            app:drawableStartCompat="@drawable/ic_default_point_gray" />

        <TextView
            android:id="@+id/tvRule2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:drawablePadding="6dp"
            android:fontFamily="@font/mtn_brighter_sans_regular"
            android:text="@string/password_rule_2"
            android:textSize="@dimen/_10sdp"
            app:drawableStartCompat="@drawable/ic_default_point_gray" />

        <TextView
            android:id="@+id/tvRule3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:drawablePadding="6dp"
            android:fontFamily="@font/mtn_brighter_sans_regular"
            android:text="@string/password_rule_3"
            android:textSize="@dimen/_10sdp"
            app:drawableStartCompat="@drawable/ic_default_point_gray" />

        <TextView
            android:id="@+id/tvRule4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:drawablePadding="6dp"
            android:fontFamily="@font/mtn_brighter_sans_regular"
            android:text="@string/password_rule_4"
            android:textSize="@dimen/_10sdp"
            app:drawableStartCompat="@drawable/ic_default_point_gray" />
    </LinearLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/mtn_brighter_sans_medium"
        android:paddingTop="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>