<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".views.MobileNumberActivity">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_65sdp"
        android:fontFamily="@font/mtn_brighter_sans_bold"
        android:gravity="center"
        android:text="@string/enter_monile_title"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearMobileNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/ic_rectangle_grey"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tv1"
        app:layout_goneMarginEnd="@dimen/_16sdp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_flag" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/mtn_brighter_sans_medium"
            android:text="@string/country_mobile_code"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <com.paysky.momogrow.views.customviews.EditMobileNumber
            android:id="@+id/etMobileNum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="@font/mtn_brighter_sans_regular"
            android:hint="@string/mobile_hint"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:maxLength="12"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_17sdp"
            android:src="@drawable/ic_remove" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvIncorrectMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/mtn_brighter_sans_regular"
        android:text="@string/mobile_number_incorrect"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/linearMobileNum" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:onClick="login"
        android:text="@string/login"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearMobileNum" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/mtn_brighter_sans_medium"
        android:onClick="nextPage"
        android:paddingTop="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>